--- a/package.json
+++ b/package.json
@@ -14,14 +14,19 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@react-email/components": "^0.5.0",
     "@react-email/render": "^1.2.0",
+    "bcryptjs": "^3.0.2",
+    "bullmq": "^5.57.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
-    "nodemailer": "^7.0.5",
+    "next-auth": "^5.0.0-beta.29",
+    "nodemailer": "^6.8.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "tailwind-merge": "^3.3.1"
+    "redis": "^5.8.1",
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
