--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@react-email/components": "^0.5.0",
     "@react-email/render": "^1.2.0",
+    "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "bullmq": "^5.57.0",
     "class-variance-authority": "^0.7.1",
@@ -23,12 +24,15 @@
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
     "next-auth": "^5.0.0-beta.29",
+    "next-themes": "^0.4.6",
     "nodemailer": "^6.8.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "redis": "^5.8.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "usehooks-ts": "^3.1.1",
     "zod": "^4.0.17"
   },
   "devDependencies": {
